Fixed gitignore stuff

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,8 @@ private.conf
 # hidden cross project folders
 shared/.js
 
-
-# Created by https://www.gitignore.io/api/eclipse
-# Edit at https://www.gitignore.io/?templates=eclipse
+# Created by https://www.gitignore.io/api/sbt,scala,eclipse
+# Edit at https://www.gitignore.io/?templates=sbt,scala,eclipse
 
 ### Eclipse ###
 .metadata
@@ -79,4 +78,22 @@ local.properties
 
 .sts4-cache/
 
-# End of https://www.gitignore.io/api/eclipse
+### SBT ###
+# Simple Build Tool
+# http://www.scala-sbt.org/release/docs/Getting-Started/Directories.html#configuring-version-control
+
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+
+### Scala ###
+*.class
+*.log
+
+# End of https://www.gitignore.io/api/sbt,scala,eclipse
