--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -286,7 +286,7 @@ play.filters {
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
     #allowed = [".example.com", "localhost:9000"]
-    allowed = ["janus00.cs.trinity.edu:9000", "pandora06", "localhost:9000", "pandora06.cs.trinity.edu:9005"]
+    allowed = ["janus00.cs.trinity.edu:9000", "pandora06.cs.trinity.edu:9000", "localhost:9000", "pandora06.cs.trinity.edu:9005"]
   }
 }
 
