--- a/client/.classpath
+++ b/client/.classpath
@@ -2,19 +2,19 @@
   <classpathentry kind="src" path="src/main/scala"/>
   <classpathentry kind="src" path="/sandwich-S19-Shared" exported="true" combineaccessrules="false"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"></classpathentry>
-  <classpathentry sourcepath="/users/dflood/.ivy2/cache/org.scala-js/scalajs-library_2.12/srcs/scalajs-library_2.12-0.6.23-sources.jar" kind="lib" path="/users/dflood/.ivy2/cache/org.scala-js/scalajs-library_2.12/jars/scalajs-library_2.12-0.6.23.jar">
+  <classpathentry sourcepath="/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-library_2.12/srcs/scalajs-library_2.12-0.6.23-sources.jar" kind="lib" path="/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-library_2.12/jars/scalajs-library_2.12-0.6.23.jar">
     <attributes>
-      <attribute name="javadoc_location" value="jar:file:/users/dflood/.ivy2/cache/org.scala-js/scalajs-library_2.12/docs/scalajs-library_2.12-0.6.23-javadoc.jar!/"/>
+      <attribute name="javadoc_location" value="jar:file:/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-library_2.12/docs/scalajs-library_2.12-0.6.23-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry sourcepath="/users/dflood/.ivy2/cache/org.scala-js/scalajs-dom_sjs0.6_2.12/srcs/scalajs-dom_sjs0.6_2.12-0.9.5-sources.jar" kind="lib" path="/users/dflood/.ivy2/cache/org.scala-js/scalajs-dom_sjs0.6_2.12/jars/scalajs-dom_sjs0.6_2.12-0.9.5.jar">
+  <classpathentry sourcepath="/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-dom_sjs0.6_2.12/srcs/scalajs-dom_sjs0.6_2.12-0.9.5-sources.jar" kind="lib" path="/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-dom_sjs0.6_2.12/jars/scalajs-dom_sjs0.6_2.12-0.9.5.jar">
     <attributes>
-      <attribute name="javadoc_location" value="jar:file:/users/dflood/.ivy2/cache/org.scala-js/scalajs-dom_sjs0.6_2.12/docs/scalajs-dom_sjs0.6_2.12-0.9.5-javadoc.jar!/"/>
+      <attribute name="javadoc_location" value="jar:file:/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-dom_sjs0.6_2.12/docs/scalajs-dom_sjs0.6_2.12-0.9.5-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry sourcepath="/users/dflood/.ivy2/cache/org.scala-js/scalajs-test-interface_2.12/srcs/scalajs-test-interface_2.12-0.6.23-sources.jar" kind="lib" path="/users/dflood/.ivy2/cache/org.scala-js/scalajs-test-interface_2.12/jars/scalajs-test-interface_2.12-0.6.23.jar">
+  <classpathentry sourcepath="/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-test-interface_2.12/srcs/scalajs-test-interface_2.12-0.6.23-sources.jar" kind="lib" path="/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-test-interface_2.12/jars/scalajs-test-interface_2.12-0.6.23.jar">
     <attributes>
-      <attribute name="javadoc_location" value="jar:file:/users/dflood/.ivy2/cache/org.scala-js/scalajs-test-interface_2.12/docs/scalajs-test-interface_2.12-0.6.23-javadoc.jar!/"/>
+      <attribute name="javadoc_location" value="jar:file:/users/gvirgen/.ivy2/cache/org.scala-js/scalajs-test-interface_2.12/docs/scalajs-test-interface_2.12-0.6.23-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
